# energy-assistant

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.fixtures  LICENSE  QUICKSTART.md  QUICK_START.md  README.md  README_DEV.md  SCRATCH.md  TODO.md  docker-compose.example.yml  example_mapper.py  example_optimizer.py  hass-energy.example.config.yaml  mapper.py  optimizer.py  plan.json  plan.md  plant.yaml  pyproject.toml  pyrightconfig.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml
custom_components/energy_assistant/: AGENTS.md  __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device.py  manifest.json  sensor.py  strings.json
custom_components/energy_assistant/energy_assistant_client/: __init__.py  client.py  models.py
custom_components/hass_energy/: AGENTS.md  __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device.py  manifest.json  sensor.py  strings.json
custom_components/hass_energy/hass_energy_client/: __init__.py  client.py  models.py
hass_energy/: __init__.py  cli.py  config.py  datalogger.py  ha_client.py  mapper.py  optimizer.py
scripts/: refresh_ems_fixture_images.py
src/energy_assistant/: __init__.py  cli.py  config.py
src/energy_assistant/api/: AGENTS.md  __init__.py  dependencies.py  server.py
src/energy_assistant/ems/: AGENTS.md  EMS_SYSTEM_DESIGN.md  __init__.py  builder.py  horizon.py  (+8 more)
src/hass_energy/: __init__.py  cli.py  config.py
tests/: test_milp_checker.py
tools/: refresh_baseline.sh
typings/pulp/: __init__.pyi
web/: package-lock.json  package.json
web/src/: App.test.tsx
(+200 files in other folders)
