[project]
name = "hass-energy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "websockets>=15.0.1",
]

[project.scripts]
hass-energy = "hass_energy.cli:main"

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["hass_energy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["hass_energy"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.9",
]
